--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="_20">20%</string>
     <string name="round_up_total">Round Up Total??</string>
     <string name="calculate_vat">Calculate VAT</string>
+    <string name="total_amount">Vat Amount: %s</string>
+
 </resources>
